# rust_nets

./: .gitignore  README.md
cifar_rust/: Cargo.toml  README.md  load_cifar.py
cifar_rust/checkpoints/epoch_10/: meta.json
cifar_rust/checkpoints/epoch_5/: meta.json
cifar_rust/src/: burn_functions.rs  cifar_data.rs  cifar_net.rs  lib.rs  main.rs  training_state.rs
